--- a/Asp.netWebAPP/Asp.netWebAPP/appsettings.json
+++ b/Asp.netWebAPP/Asp.netWebAPP/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MANISHA_09\\SQLSERVER2022;Database=ABDM_DEV;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=MANISHA_09\\SQLSERVER2022;Database=ABDM_DEV;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DanpheDb": "Server=MANISHA_09\\SQLSERVER2022;Database=Danphe_DEV_Env;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
